--- a/backend/.eslintrc.json
+++ b/backend/.eslintrc.json
@@ -20,6 +20,9 @@
     ],
     "rules": {
       "no-underscore-dangle":"off",
+      "no-unused-vars": "off",
+      "camelcase": "off",
+      
     "class-methods-use-this":"off",
     "prettier/prettier": ["error", {
 
@@ -28,9 +31,7 @@
    }],
     "no-useless-constructor":"off",
     "@typescript-eslint/camelcase": "off",
-    "@typescript-eslint/no-unused-vars":["error",{
-      "argsIgnorePattern":"_"
-    }],
+    "@typescript-eslint/no-unused-vars":"off",
     "@typescript-eslint/interface-name-prefix":["error", { "prefixWithI":"always"}],
 
     "import/extensions": [
