--- a/backend/package.json
+++ b/backend/package.json
@@ -5,15 +5,17 @@
   "license": "MIT",
   "scripts": {
     "dev": "ts-node-dev --transpile-only --ignore-watch node_modules src/server.ts",
-    "typeorm":"ts-node-dev ./node_modules/typeorm/cli.js"
+    "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
     "express": "^4.17.1",
+    "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
     "typeorm": "^0.2.28"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
+    "@types/multer": "^1.4.4",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
