--- a/backend/package.json
+++ b/backend/package.json
@@ -8,15 +8,19 @@
     "typeorm": "ts-node-dev ./node_modules/typeorm/cli.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "express": "^4.17.1",
     "express-async-errors": "^3.1.1",
     "multer": "^1.4.2",
     "sqlite3": "^5.0.0",
-    "typeorm": "^0.2.28"
+    "typeorm": "^0.2.28",
+    "yup": "^0.29.3"
   },
   "devDependencies": {
     "@types/express": "^4.17.8",
     "@types/multer": "^1.4.4",
+    "@types/cors": "^2.8.8",
+    "@types/yup": "^0.29.8",
     "@typescript-eslint/eslint-plugin": "^4.4.1",
     "@typescript-eslint/parser": "^2.27.0",
     "eslint": "^6.8.0",
